# Qestify

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
client/: index.html  package-lock.json  package.json  script.js  style.css  vite.config.js
client/admin/: admin.css  admin.html  admin.js
client/result/: result.html  result.js
server/: .env  app.py  pyproject.toml
server/db/: init_db.py  test.py
